WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35521
[Android] The platform touch events on Android are missing support for key modifiers.
https://bugs.webkit.org/show_bug.cgi?id=35521
Summary
[Android] The platform touch events on Android are missing support for key mo...
Ben Murdoch
Reported
2010-03-01 04:13:40 PST
This bug is to track upstreaming of support for key modifiers and event time in Touch Events on Android.
Attachments
Proposed Patch.
(11.07 KB, patch)
2010-03-08 04:15 PST
,
Ben Murdoch
no flags
Details
Formatted Diff
Diff
Patch sans-tab.
(11.09 KB, patch)
2010-03-08 04:18 PST
,
Ben Murdoch
no flags
Details
Formatted Diff
Diff
Proposed Patch.
(4.34 KB, patch)
2010-03-10 07:29 PST
,
Ben Murdoch
jorlow
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ben Murdoch
Comment 1
2010-03-08 04:15:59 PST
Created
attachment 50204
[details]
Proposed Patch. Adds support for key modifiers in Android touch events. Also adds a platformEventTime member to touch events to reflect the time that the event was started on the platform side rather than the WebCore side. For example, on Android this is set to the Java side touch event time. Due to the asynchronous nature of Android's touch event handling, this platform time may be significantly different to the time that the event is constructed inside WebCore.
Ben Murdoch
Comment 2
2010-03-08 04:18:37 PST
Created
attachment 50205
[details]
Patch sans-tab. Removed a couple of tabs from the Changelog.
Ben Murdoch
Comment 3
2010-03-10 07:29:55 PST
Created
attachment 50402
[details]
Proposed Patch.
Ben Murdoch
Comment 4
2010-03-11 03:56:58 PST
Please note that contrary to my
comment #1
, Android no longer needs support for platformEventTime, which is why it no longer appears in the patch.
Jeremy Orlow
Comment 5
2010-03-11 07:14:54 PST
Comment on
attachment 50402
[details]
Proposed Patch.
> Index: WebCore/ChangeLog > =================================================================== > --- WebCore/ChangeLog (revision 55774) > +++ WebCore/ChangeLog (working copy) > @@ -1,3 +1,24 @@ > +2010-03-10 Ben Murdoch <
benm@google.com
> > + > + Reviewed by NOBODY (OOPS!). > + > + [Android] The platform touch events on Android are missing support > + for key modifiers. > +
https://bugs.webkit.org/show_bug.cgi?id=35521
> + > + Add support in PlatformToucHEventAndroid for the platform supplying > + key modifiers with touch events. > + > + Exisiting touch events test suffice.
Change this to say that you're making existing tests work that didn't before.
Ben Murdoch
Comment 6
2010-03-11 07:28:53 PST
Landed as
r55843
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug