Prepare touch key modifiers for upstreaming.

Fix two compiler warnings in EventHandler.cpp

The webkit bug tracking this was https://bugs.webkit.org/show_bug.cgi?id=35521
and was landed to the WebKit tree as r55843.

Change-Id: Id49ba00d49bf98797a79b6f55b1cb1f906f5e0ad