WebCore/platform/android/PlatformTouchEventAndroid.cpp
@@ -30,7 +30,6 @@
 
 namespace WebCore {
 
-// TODO(benm): This enum needs upstreaming.
 // These values should be kept in sync with those defined in the android.view.KeyEvent class from the Android SDK.
 enum AndroidMetaKeyState {
     META_SHIFT_ON = 0x01,
@@ -38,14 +37,12 @@ enum AndroidMetaKeyState {
     META_SYM_ON = 0x04
 };
 
-// TODO (benm): metaState are new and needs to be upstreamed.
 PlatformTouchEvent::PlatformTouchEvent(const IntPoint& windowPos, TouchEventType type, PlatformTouchPoint::State state, int metaState)
     : m_type(type)
     , m_metaKey(false)
 {
     m_touchPoints.append(PlatformTouchPoint(windowPos, state));
 
-    // TODO(benm): metaState needs upstreaming.
     m_altKey = metaState & META_ALT_ON;
     m_shiftKey = metaState & META_SHIFT_ON;
     m_ctrlKey = metaState & META_SYM_ON;
